ajuste ded url's para evitar erro de CORS